--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -30,12 +30,12 @@ canvas {
     height: 480px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     padding: 5px;
 }
 
 body.dark .container {
-    box-shadow: 0px 4px 12px rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 12px rgba(168, 168, 168, 0.3);
 }
 
 body.dark {
